# vibe-kanban

./: Cargo.toml  package.json  pnpm-lock.yaml
.github/workflows/: pre-release.yml  test.yml
crates/db/: Cargo.toml
crates/db/.sqlx/: query-10f7e20c57dd336fbd405a1080722a0d6ca5b304e88a9fdacacf6c85de00b81f.json
crates/deployment/: Cargo.toml
crates/executors/: Cargo.toml  default_mcp.json  default_profiles.json
crates/executors/src/: stdout_dup.rs
crates/local-deployment/: Cargo.toml
crates/local-deployment/src/: container.rs
crates/remote/: Cargo.toml
crates/review/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/routes/: projects.rs  repo.rs  tasks.rs
crates/server/src/routes/sessions/: mod.rs
crates/server/src/routes/task_attempts/: workspace_summary.rs
crates/services/: Cargo.toml
crates/services/tests/: git_workflow.rs
crates/utils/: Cargo.toml
frontend/: .eslintrc.cjs  package.json  tailwind.new.config.js  vite.config.ts  vite.config.ts.timestamp-1767510231763-e5a8246a3d225.mjs
frontend/src/: App.tsx
frontend/src/components/: GoogleSsoGuard.tsx  GoogleSsoLogin.tsx
frontend/src/contexts/: CreateModeContext.tsx  FileNavigationContext.tsx  LogNavigationContext.tsx  ReviewProvider.tsx  WorkspaceContext.tsx
frontend/src/hooks/: useConversationHistory.ts  useCreateAttachments.ts  useCreateModeState.ts  useCreateSession.ts  useDevServer.ts  useMessageEditRetry.ts  useProjectTasks.ts  useSessionAttachments.ts  useSessionMessageEditor.ts  useSessionQueueInteraction.ts  useSessionSend.ts  useTaskMutations.ts  useWorkspaceSessions.ts
frontend/src/i18n/: config.ts  languages.ts
npx-cli/: package.json
shared/: types.ts
(+118 files in other folders)
